<resources>
    <string name="app_name">Notes</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="text_note_editor_hint">Tap here to type your note</string>

    <string name="none"></string>
    <string name="navbar_list">Notes</string>
    <string name="navbar_profiles">Profiles</string>
    <string name="navbar_settings">Settings</string>

    <string name="back_button">return</string>
    <string name="delete_button">delete note</string>

    <string name="new_text_note">New text note</string>
    <string name="new_audio_note">New audio note</string>
    <string name="new_note">New note</string>
    <string name="default_note_name">Untitled Note</string>


    <string name="cancel">Cancel</string>
    <string name="create">Create</string>
    <string name="preference_key_users_list">usersListPrefSettings</string>
    <string name="preferences_retrieve_users">getUsers</string>
    <string name="submit">Submit</string>
    <string name="rename_note">Rename Note</string>
</resources>