<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="30dp"
    android:layout_marginTop="16dp"
    android:layout_marginRight="30dp"
    android:orientation="vertical"
    android:paddingTop="16dp"
    android:paddingBottom="16dp">

    <TextView
        android:id="@+id/renameNoteTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rename_note"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/noteNewName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="24dp"
        android:ems="10"
        android:hint="@string/default_note_name"
        android:inputType="text"
        android:minHeight="48dp"
        android:autofillHints="" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/cancelRename"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginEnd="10dp"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/submitRename"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right|end"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:text="@string/submit" />
    </LinearLayout>

</LinearLayout>