<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"

        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/frame"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="0dp"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/secondary"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:title="@string/none"
                app:titleTextColor="@color/dark_contrast_tint" />

            <ImageView
                android:id="@+id/appbar_settings"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginEnd="18dp"
                android:contentDescription="Settings Icon"
                android:src="@drawable/ic_notebar_settings"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/appbar_delete"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/appbar_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:textColor="@color/dark_contrast_tint"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/appbar_back"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Appbar Title" />

            <ImageView
                android:id="@+id/appbar_delete"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginEnd="16dp"
                android:contentDescription="@string/delete_button"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/toolbar"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_notebar_delete" />

            <ImageView
                android:id="@+id/appbar_back"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginStart="12dp"
                android:contentDescription="@string/back_button"
                android:src="@drawable/ic_notebar_back"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <FrameLayout
        android:id="@+id/frame"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appbar">

    </FrameLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frame"
        app:menu="@menu/navbar">

    </com.google.android.material.bottomnavigation.BottomNavigationView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/newNoteButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="100dp"
        android:clickable="true"
        android:contentDescription="@string/new_note"
        android:focusable="true"
        app:layout_constraintBottom_toBottomOf="@+id/bottomNavigationView"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@android:drawable/ic_input_add" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/otherNoteButtons"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible">

        <Button
            android:id="@+id/notNewNoteButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="#00FFFFFF"
            android:text="@string/none"
            tools:ignore="SpeakableTextPresentCheck" />

        <Button
            android:id="@+id/newTextNoteButton"
            android:layout_width="200dp"
            android:layout_height="64dp"
            android:layout_marginEnd="24dp"
            android:backgroundTint="?colorPrimary"
            android:text="@string/new_text_note"
            android:textColor="?colorOnPrimary"
            android:textSize="16sp"
            app:cornerRadius="16dp"
            app:icon="@drawable/ic_note_text"
            app:iconTint="?colorOnPrimary"
            app:layout_constraintBottom_toTopOf="@+id/newAudioNoteButton"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/newAudioNoteButton"
            android:layout_width="200dp"
            android:layout_height="64dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="164dp"
            android:backgroundTint="?colorPrimary"
            android:text="@string/new_audio_note"
            android:textColor="?colorOnPrimary"
            android:textSize="16sp"
            app:cornerRadius="16dp"
            app:icon="@drawable/ic_note_audio"
            app:iconTint="?colorOnPrimary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>